--- a/style.css
+++ b/style.css
@@ -29,3 +29,30 @@
     margin-left: 2%;
     border-radius: 30%;
 }
+
+.menu{
+    width: 25px;
+    height: 25px;
+    background-color: gray;
+    margin-left: 2%;
+    border-radius: 30%;
+}
+
+@media (max-width: 600px) {
+    .nav a{display: none;}
+    
+}
+
+@media (min-width: 600px) {
+    .menu {display: none;}
+}
+
+.SlideShow {
+    background-color: lightgray;
+    height: 500px;
+}
+
+footer{
+    box-shadow: 0 1px 15px -10px black;
+    height: 150px;
+}
