--- a/style.css
+++ b/style.css
@@ -22,7 +22,10 @@
 
 .navItems a {
     color: black;
-    padding: 5px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-right: 5px;
+    padding-left: 5px;
     text-decoration-line: none;
 }
 
@@ -44,11 +47,12 @@
 
 @media (max-width: 600px) {
     .nav a{display: none;}
-    
+    .footer {height: 150px;}
 }
 
 @media (min-width: 600px) {
     .menu {display: none;}
+    .footer {height: 250px;}
 }
 
 section{
@@ -60,7 +64,10 @@ section{
     height: 500px;
 }
 
-footer{
+.footer{
     box-shadow: 0 1px 15px -10px black;
-    height: 150px;
+}
+
+.nav a:hover{
+    background-color: lightgrey;
 }
